upgpkg: kdeutils 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10447 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeutils/trunk/PKGBUILD
+++ b/kdeutils/trunk/PKGBUILD
@@ -1,19 +1,19 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdeutils
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE Utils is a compilation of various desktop utilities."
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('kdepimlibs' 'libzip' 'python' 'libarchive' 'kdebase-workspace' 'gmp')
+depends=('kdepimlibs' 'libzip' 'python' 'libarchive' 'kdebase-workspace')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'pyqt')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('80c1bd398620bb7e02acd31edf767eca')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('ba8d72606f71afcb649d2b9871815359')
 
 build() {
 	cd $srcdir
