--- a/kdewebdev/trunk/PKGBUILD
+++ b/kdewebdev/trunk/PKGBUILD
@@ -1,19 +1,19 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdewebdev
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE Web Development Applications"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('kdepimlibs')
+depends=('kdepimlibs' 'kdebase-runtime' 'tidyhtml')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('28e5600e4deafb8467b19b4c575e8b37')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('15b3861e2746549fb3ae2c5448ba27ef')
 
 build() {
 	cd $srcdir
