--- a/konq-plugins/trunk/PKGBUILD
+++ b/konq-plugins/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=konq-plugins
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Konqueror Plugins"
 arch=('i686' 'x86_64')
@@ -11,8 +11,8 @@ license=('LGPL')
 depends=('kdebase')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.kde.org/pub/kde/stable/${pkgver}/src/extragear/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('aac0727e541c0e53c0d821ea644d13fb')
+source=("http://download.kde.org/stable/${pkgver}/src/extragear/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('91ba68f763811deec646edb02e8b44ad')
 
 build() {
 	cd $srcdir
