upgpkg: skanlite 0.2-2     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10455 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/skanlite/trunk/PKGBUILD
+++ b/skanlite/trunk/PKGBUILD
@@ -1,10 +1,10 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=skanlite
 pkgver=0.2
-_kdever=4.1.0
-pkgrel=1
+_kdever=4.1.1
+pkgrel=2
 pkgdesc="Image Scanning Application for KDE"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -12,8 +12,8 @@ license=('LGPL')
 depends=('kdegraphics')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.kde.org/pub/kde/stable/${_kdever}/src/extragear/${pkgname}-${pkgver}-kde${_kdever}.tar.bz2")
-md5sums=('de1e271e129e75a2614d7c2d844436e8')
+source=("http://download.kde.org/stable/${_kdever}/src/extragear/${pkgname}-${pkgver}-kde${_kdever}.tar.bz2")
+md5sums=('f96290416d81cad843479fa2da68f2bb')
 
 build() {
 	cd $srcdir
