--- a/kde-l10n-bg/trunk/PKGBUILD
+++ b/kde-l10n-bg/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-bg
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Bulgarian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-bg')
 provides=('kde-i18n-bg')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('9f9d305491d04d42d2b4e049b61cfeb1')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('2ab87283b4d19d2757aa94d399e5ed41')
 
 build() {
 	cd $srcdir
