--- a/kde-l10n-ca/trunk/PKGBUILD
+++ b/kde-l10n-ca/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-ca
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Catalan Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-ca')
 provides=('kde-i18n-ca')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('d6a99256a20f12c345257ebe102487d6')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('770f1affd26538fa8ab656a977c63ae2')
 
 build() {
 	cd $srcdir
