--- a/kde-l10n-cs/trunk/PKGBUILD
+++ b/kde-l10n-cs/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-cs
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Czech Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-cs')
 provides=('kde-i18n-cs')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('d6db9a439d732d88888e4c45874a9483')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('1cc38671b47519b688cb340b73a07327')
 
 build() {
 	cd $srcdir
