--- a/kde-l10n-csb/trunk/PKGBUILD
+++ b/kde-l10n-csb/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-csb
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Kashubian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-csb')
 provides=('kde-i18n-csb')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('ee31cf7a6b5f5196abf0b2597aa4c5f3')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('8bf5955d5973b125c9beecc95278e2f8')
 
 build() {
 	cd $srcdir
