upgpkg: kde-l10n-da 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10465 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-da/trunk/PKGBUILD
+++ b/kde-l10n-da/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-da
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Danish Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-da')
 provides=('kde-i18n-da')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('fe134a0a05e975aff1152713b3576d2b')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('98e31b3e3210efbf6452f2f6e211ca91')
 
 build() {
 	cd $srcdir
