upgpkg: kde-l10n-de 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10467 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-de/trunk/PKGBUILD
+++ b/kde-l10n-de/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-de
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="German Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-de')
 provides=('kde-i18n-de')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('933ea8616999262bfdc9113f5eeea839')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('0591df80e995c0327cd2ae001bb0fad1')
 
 build() {
 	cd $srcdir
