--- a/kde-l10n-el/trunk/PKGBUILD
+++ b/kde-l10n-el/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-el
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Greek Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-el')
 provides=('kde-i18n-el')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('52745fb0a0a781931f30dd9622973d81')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('c234b1c16dbc33bda93eb1dae1c10a0d')
 
 build() {
 	cd $srcdir
