upgpkg: kde-l10n-en_gb 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10472 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-en_gb/trunk/PKGBUILD
+++ b/kde-l10n-en_gb/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-en_gb
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="British English Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-en_gb')
 provides=('kde-i18n-en_gb')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/kde-l10n-en_GB-${pkgver}.tar.bz2")
-md5sums=('c8cb7ef97089dab92a0a569bd58135d7')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/kde-l10n-en_GB-${pkgver}.tar.bz2")
+md5sums=('ce7736b393ada3ea11eea1570a9803d9')
 
 build() {
 	cd $srcdir
