upgpkg: kde-l10n-eo 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10474 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-eo/trunk/PKGBUILD
+++ b/kde-l10n-eo/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-eo
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Esperanto Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-eo')
 provides=('kde-i18n-eo')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('515c1437cf678d0895e42b0323e7ff44')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('4d5da5133143848f822b5e1dc7cf734b')
 
 build() {
 	cd $srcdir
