--- a/kde-l10n-es/trunk/PKGBUILD
+++ b/kde-l10n-es/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-es
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Spanish Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-es')
 provides=('kde-i18n-es')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('2b34fbf09c8ed46860a61eaa7adba4bf')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('396e19841b971cf2d43ba9a5f737c1c2')
 
 build() {
 	cd $srcdir
