--- a/kde-l10n-et/trunk/PKGBUILD
+++ b/kde-l10n-et/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-et
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Estonian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-et')
 provides=('kde-i18n-et')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('07fddd472185cc1da89d1f8be9c99eb2')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('ccd584c03059ccc664f0fd1fcab07d09')
 
 build() {
 	cd $srcdir
