--- a/kde-l10n-fi/trunk/PKGBUILD
+++ b/kde-l10n-fi/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-fi
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Finnish Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-fi')
 provides=('kde-i18n-fi')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('3d79c8e439f19c8d7b32eff1befff491')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('9e28e836e308d998b934308cc62b9db0')
 
 build() {
 	cd $srcdir
