--- a/kde-l10n-fy/trunk/PKGBUILD
+++ b/kde-l10n-fy/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-fy
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Frisian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-fy')
 provides=('kde-i18n-fy')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('c620fe142ea1680c1bd6e3bad9705ab8')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('d8482cd920425ca38174ee9dec21c606')
 
 build() {
 	cd $srcdir
