--- a/kde-l10n-ga/trunk/PKGBUILD
+++ b/kde-l10n-ga/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-ga
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Irish Gaelic Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-ga')
 provides=('kde-i18n-ga')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('b993136b301ab6d76b6e011bea13363c')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('c0e69ba86aae673ad7a8da80702778df')
 
 build() {
 	cd $srcdir
