upgpkg: kde-l10n-gl 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10487 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-gl/trunk/PKGBUILD
+++ b/kde-l10n-gl/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-gl
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Galician Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-gl')
 provides=('kde-i18n-gl')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('de4c551b47566f6dc851a812d7ffe92e')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('bce5d61e617001b52166c9f0ae232586')
 
 build() {
 	cd $srcdir
