upgpkg: kde-l10n-hi 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10489 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-hi/trunk/PKGBUILD
+++ b/kde-l10n-hi/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-hi
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Hindi Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-hi')
 provides=('kde-i18n-hi')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('25400debbb4819ef5a50c90a6dbed8b8')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('812c9ddb40c25bd486380bdf6e2b0fea')
 
 build() {
 	cd $srcdir
