--- a/kde-l10n-hu/trunk/PKGBUILD
+++ b/kde-l10n-hu/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-hu
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Hungarian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-hu')
 provides=('kde-i18n-hu')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('0c27402ba098c1c3aa4b9885520940dd')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('b47eade7252e65962e5986da9abbab67')
 
 build() {
 	cd $srcdir
