--- a/kde-l10n-it/trunk/PKGBUILD
+++ b/kde-l10n-it/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-it
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Italian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-it')
 provides=('kde-i18n-it')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('e01f121e5b48c23accc56284a22e3e70')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('75268d5cf444706066197f64c6ce0f86')
 
 build() {
 	cd $srcdir
