--- a/kde-l10n-ja/trunk/PKGBUILD
+++ b/kde-l10n-ja/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-ja
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Japanese Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-ja')
 provides=('kde-i18n-ja')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('4320f7881e0874199d5be2cd3095a983')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('cd9a6b97968f6bea740394206913e794')
 
 build() {
 	cd $srcdir
