--- a/kde-l10n-kk/trunk/PKGBUILD
+++ b/kde-l10n-kk/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-kk
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Kazakh Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-kk')
 provides=('kde-i18n-kk')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('dea08924f489d7303be3340741dd9c07')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('a58a0bc175b711da8b36d57e17719f5c')
 
 build() {
 	cd $srcdir
