--- a/kde-l10n-km/trunk/PKGBUILD
+++ b/kde-l10n-km/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-km
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Khmer Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-km')
 provides=('kde-i18n-km')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('5a5b82e16cef09d6f8b357b335784319')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('1cb3ae6d2df2b98750f8ac374173de71')
 
 build() {
 	cd $srcdir
