upgpkg: kde-l10n-ko 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10502 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-ko/trunk/PKGBUILD
+++ b/kde-l10n-ko/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-ko
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Korean Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-ko')
 provides=('kde-i18n-ko')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('1e82a96793ab0d8ac6c0f7950f2d4fbb')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('c6d5f55794a7b8ae6b29f38a3be17b58')
 
 build() {
 	cd $srcdir
