--- a/kde-l10n-ku/trunk/PKGBUILD
+++ b/kde-l10n-ku/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-ku
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Kurdish Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-ku')
 provides=('kde-i18n-ku')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('663254e9bfdfd5aded41d56abad60ba8')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('8a3f5855d56401dcc0e8de243573f0a1')
 
 build() {
 	cd $srcdir
