upgpkg: kde-l10n-lt 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10506 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-lt/trunk/PKGBUILD
+++ b/kde-l10n-lt/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-lt
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Lithuanian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-lt')
 provides=('kde-i18n-lt')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('d337af1dc3cd2809f162a75677e1df55')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('c7fc563d7235df4662bb0bd0b74381fc')
 
 build() {
 	cd $srcdir
