--- a/kde-l10n-lv/trunk/PKGBUILD
+++ b/kde-l10n-lv/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-lv
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Latvian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-lv')
 provides=('kde-i18n-lv')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('77a7eed923a88f37a1b61de3d1edb1fb')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('a5cd5d5f88daa3c35a5caeda5e7398c4')
 
 build() {
 	cd $srcdir
