--- a/kde-l10n-mk/trunk/PKGBUILD
+++ b/kde-l10n-mk/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-mk
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Macedonian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-mk')
 provides=('kde-i18n-mk')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('9605c9d1262e7769516db856672c73fe')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('87d8544833a668bdd63d2ebc93790d2a')
 
 build() {
 	cd $srcdir
