--- a/kde-l10n-ml/trunk/PKGBUILD
+++ b/kde-l10n-ml/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-ml
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Malayalam Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-ml')
 provides=('kde-i18n-ml')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('16c42105325f8b50b50ab0ff5d92dada')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('6e4d9cadab8c8a09ab25456c428d7011')
 
 build() {
 	cd $srcdir
