--- a/kde-l10n-nb/trunk/PKGBUILD
+++ b/kde-l10n-nb/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-nb
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Norwegian Bokmal Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-nb')
 provides=('kde-i18n-nb')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('c06b41ce5ec7bf4a98617cc4749c40ea')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('a174238791d14c5c22b33f8bb58ecbd3')
 
 build() {
 	cd $srcdir
