upgpkg: kde-l10n-nds 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10516 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-nds/trunk/PKGBUILD
+++ b/kde-l10n-nds/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-nds
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Low Saxon Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-nds')
 provides=('kde-i18n-nds')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('2268882b2611ccd9ebd22ffb6bf74ec2')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('10d3f8f6fa61d949e127b97b129a3e56')
 
 build() {
 	cd $srcdir
