upgpkg: kde-l10n-nl 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10518 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-nl/trunk/PKGBUILD
+++ b/kde-l10n-nl/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-nl
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Dutch Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-nl')
 provides=('kde-i18n-nl')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('b274f24fbe8af22a5fed6cddcfe3f2af')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('0afcbddef0516e99fa7dc8037e736864')
 
 build() {
 	cd $srcdir
