--- a/kde-l10n-nn/trunk/PKGBUILD
+++ b/kde-l10n-nn/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-nn
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Norwegian Nynorsk Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-nn')
 provides=('kde-i18n-nn')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('0655156630146833fca458b58a3acec7')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('692223cbf474759d84ff0956b922d7c8')
 
 build() {
 	cd $srcdir
