upgpkg: kde-l10n-pa 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10522 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-pa/trunk/PKGBUILD
+++ b/kde-l10n-pa/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-pa
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Panjabi/Punjabi Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-pa')
 provides=('kde-i18n-pa')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('117be83e44d63b9774042e8c79d55afe')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('4367dd18f84a0265e87c78f4a0adcaba')
 
 build() {
 	cd $srcdir
