--- a/kde-l10n-pl/trunk/PKGBUILD
+++ b/kde-l10n-pl/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-pl
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Polish Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-pl')
 provides=('kde-i18n-pl')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('db1cfdb3fea4dbdd268a25ed5b3e5cfd')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('7ddf979828a386f02383e672aea1ee65')
 
 build() {
 	cd $srcdir
