upgpkg: kde-l10n-pt 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10526 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-pt/trunk/PKGBUILD
+++ b/kde-l10n-pt/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-pt
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Portuguese Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-pt')
 provides=('kde-i18n-pt')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('cab7941d3b85126305b54f6341f88e86')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('423b863663061cc05260bd6136c839f6')
 
 build() {
 	cd $srcdir
