--- a/miro/repos/testing-i686/PKGBUILD
+++ b/miro/repos/testing-i686/PKGBUILD
@@ -1,23 +1,26 @@
 # $Id$
-# Maintainer: Varun Acharya <varun@archlinux.org>
+# Maintainer: Ronald van Haren <ronald.archlinux.org>
 
 pkgname=miro
-pkgver=1.2.4
-pkgrel=2
+pkgver=1.2.7
+pkgrel=1
 pkgdesc="The free and open source internet TV platform"
 arch=('i686' 'x86_64')
 url="http://www.getmiro.com"
-license=('GPL')
+license=('GPL2')
 depends=('xine-lib>=1.1.12' 'boost>=1.35.0' 'gnome-python-extras>=2.19.1'
-	 'dbus-python>=0.82.4' 'pyrex' 'xulrunner>=1.9.0.1')
+	 'dbus-python>=0.82.4' 'pyrex' 'xulrunner>=1.9.0.1' 'gtk2' 'nspr')
 makedepends=('pkgconfig' 'qt3')
 conflicts=('democracy')
 replaces=('democracy')
 provides=('democracy')
-source=(http://ftp.osuosl.org/pub/pculture.org/miro/src/Miro-${pkgver}.tar.gz
+
+#use our own checkout, the official one is missing files
+#http://ftp.osuosl.org/pub/pculture.org/miro/src/Miro-${pkgver}.tar.gz
+source=(http://dev.archlinux.org/~ronald/Miro-1.2.7.tar.gz
         missing-headers.patch
 	Miro-xulrunner.patch)
-md5sums=('0bb345164b1b6f79ed60f5aab891385f'
+md5sums=('e55150642de55fc52eb2599e3dc6fe21'
          'b5482eac565a26817af0105b061a8ad5'
          '3c06b40cd13c2fb202f58dcf64d4b524')
 
