upgpkg: kde-l10n-ru 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10532 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-ru/trunk/PKGBUILD
+++ b/kde-l10n-ru/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-ru
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Russian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-ru')
 provides=('kde-i18n-ru')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('b398b7922ffc10caaaabcbccdeff004a')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('d5e265a13c772e93b31a6d7c147ccfe9')
 
 build() {
 	cd $srcdir
