--- a/kde-l10n-sl/trunk/PKGBUILD
+++ b/kde-l10n-sl/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-sl
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Slovenian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-sl')
 provides=('kde-i18n-sl')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('a84b15c11269bc88be5d66a4a39c6809')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('a37237cea98b434d1f5ac01259b0453f')
 
 build() {
 	cd $srcdir
