--- a/kde-l10n-sv/trunk/PKGBUILD
+++ b/kde-l10n-sv/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-sv
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Swedish Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-sv')
 provides=('kde-i18n-sv')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('e47197703100923a0acc48a2cb4ebda6')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('0aed3d7ef74f1a6bbf34425dbe229ae5')
 
 build() {
 	cd $srcdir
