--- a/kde-l10n-ta/trunk/PKGBUILD
+++ b/kde-l10n-ta/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-ta
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Tamil Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-ta')
 provides=('kde-i18n-ta')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('d9b97e86d51a23d6c84834835719abb7')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('87bb1c1762964e01a60ef9347b5e0af3')
 
 build() {
 	cd $srcdir
