--- a/kde-l10n-th/trunk/PKGBUILD
+++ b/kde-l10n-th/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-th
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Thai Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-th')
 provides=('kde-i18n-th')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('5b056599a2103cf7c04f889663849329')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('bfe292d8623a25a02501ded7f032d5a7')
 
 build() {
 	cd $srcdir
