--- a/kde-l10n-tr/trunk/PKGBUILD
+++ b/kde-l10n-tr/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-tr
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Turkish Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-tr')
 provides=('kde-i18n-tr')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('9f0ceef70241baed836e64487af280a1')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('ea6e15c587e2f4d2533353815cd4ed8a')
 
 build() {
 	cd $srcdir
