--- a/kde-l10n-uk/trunk/PKGBUILD
+++ b/kde-l10n-uk/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-uk
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Ukrainian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-uk')
 provides=('kde-i18n-uk')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('411c4f43116afe52671def6b33e66e1e')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('4faf1d7c7817697c3c76541706166078')
 
 build() {
 	cd $srcdir
