--- a/kde-l10n-wa/trunk/PKGBUILD
+++ b/kde-l10n-wa/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-wa
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Walloon Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-wa')
 provides=('kde-i18n-wa')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('61d76148fbc4a44ec4158acb404e6bc1')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('6bee00ed5512c5c7123cd40e8bc27c9e')
 
 build() {
 	cd $srcdir
