upgpkg: kde-l10n-zh_cn 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10549 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-zh_cn/trunk/PKGBUILD
+++ b/kde-l10n-zh_cn/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-zh_cn
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Chinese Simplified Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-zh_cn')
 provides=('kde-i18n-zh_cn')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/kde-l10n-zh_CN-${pkgver}.tar.bz2")
-md5sums=('2fa7d8bb2f2773b4517a0915f4874053')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/kde-l10n-zh_CN-${pkgver}.tar.bz2")
+md5sums=('134cd3d65db7352e88f05df547af04db')
 
 build() {
 	cd $srcdir
