upgpkg: binutils 2.18-9     new toolchain for new kernel-headers, gcc-4.3.2 and added info files all around
git-svn-id: file:///srv/repos/svn-packages/svn@10565 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/binutils/trunk/PKGBUILD
+++ b/binutils/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=binutils
 pkgver=2.18
-pkgrel=8
+pkgrel=9
 _date=20080610
 pkgdesc="A set of programs to assemble and manipulate binary and object files"
 arch=('i686' 'x86_64')
@@ -13,10 +13,11 @@ url="http://sources.redhat.com/binutils"
 license=('GPL')
 groups=('base')
 options=('!libtool' '!distcc' '!ccache')
-depends=('glibc>=2.8-1')
-makedepends=('texinfo>=4.12-2')
+depends=('glibc>=2.8-3')
+makedepends=('texinfo>=4.12-3')
 source=(ftp://ftp.archlinux.org/other/${pkgname}/${pkgname}-${pkgver}_${_date}.tar.bz2)
 md5sums=('9847b4141a1c99558cfd88dd65182566')
+install=binutils.install
 
 build() {
   # for cvs checkout
@@ -64,4 +65,6 @@ build() {
   # Remove these symlinks, with binutils prereleases they are not ABI stable.
   # Programs should compile static to the .a file.
   rm -f ${startdir}/pkg/usr/lib/lib{bfd,opcodes}.so
+
+  rm -f ${pkgdir}/usr/share/info/dir
 }
