upgpkg: gcc-libs 4.3.2-1     new toolchain for new kernel-headers, gcc-4.3.2 and added info files all around
git-svn-id: file:///srv/repos/svn-packages/svn@10568 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/gcc-libs/trunk/PKGBUILD
+++ b/gcc-libs/trunk/PKGBUILD
@@ -1,27 +1,29 @@
 # $Id$
 # Maintainer: Jan de Groot <jgc@archlinux.org>
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
+
 pkgname=gcc-libs
-pkgver=4.3.1
-pkgrel=3
-_snapshot=4.3-20080724
+pkgver=4.3.2
+pkgrel=1
+#_snapshot=4.3-20080724
 pkgdesc="Runtime libraries shipped by GCC for C and C++ languages"
-arch=(i686 x86_64)
+arch=('i686' 'x86_64')
 license=('GPL' 'LGPL')
 groups=('base')
 url="http://gcc.gnu.org"
-depends=('glibc>=2.8-2')
-makedepends=('binutils>=2.18-8' 'gcc>=4.3.1' 'mpfr>=2.3.1' 'texinfo')
+depends=('glibc>=2.8-3')
+makedepends=('binutils>=2.18-9' 'gcc>=4.3.2' 'mpfr>=2.3.1' 'texinfo')
 conflicts=('gcc-fortran' 'gcc-objc')
 provides=("gcc-objc=${pkgver}")
-options=('!libtool' '!emptydirs')
-source=(#ftp://gcc.gnu.org/pub/gcc/releases/gcc-${pkgver}/gcc-{core,g++,fortran,objc}-${pkgver}.tar.bz2
-	ftp://gcc.gnu.org/pub/gcc/snapshots/${_snapshot}/gcc-{core,g++,fortran,objc}-${_snapshot}.tar.bz2
+options=('!libtool' '!emptydirs' '!docs')
+source=(ftp://gcc.gnu.org/pub/gcc/releases/gcc-${pkgver}/gcc-{core,g++,fortran,objc}-${pkgver}.tar.bz2
+	#ftp://gcc.gnu.org/pub/gcc/snapshots/${_snapshot}/gcc-{core,g++,fortran,objc}-${_snapshot}.tar.bz2
 	gcc_pure64.patch
 	gcc-hash-style-both.patch)
-md5sums=('99ce6170e379779fe9c0971f9e27c704'
-         'e39db43584ec603b314348405c753bd5'
-         '76b9d6a71eb2cd778cd6ad3e9d576c64'
-         '2b2456702ca6362b01583160e888be14'
+md5sums=('dd8048b43d3d4e5595bcade47b9144c6'
+         'bfdf8d19e1b85f522f8b8d48d25e7aaa'
+         'b3294ae213d65e05aacb9b46d11e1025'
+         '08efa42ef267f8759146aa4e11904d25'
          '4030ee1c08dd1e843c0225b772360e76'
          'bb420bc84b1104455b7230b1cd4b96c2')
 
@@ -31,8 +33,8 @@ build() {
     return 1
   fi
   
-  #cd ${srcdir}/gcc-${pkgver}
-  cd ${srcdir}/gcc-${_snapshot}
+  cd ${srcdir}/gcc-${pkgver}
+  #cd ${srcdir}/gcc-${_snapshot}
   # Don't install libiberty
   sed -i 's/install_to_$(INSTALL_DEST) //' libiberty/Makefile.in
 
@@ -44,7 +46,7 @@ build() {
   # Don't run fixincludes
   sed -i -e 's@\./fixinc\.sh@-c true@' gcc/Makefile.in
 
-  echo ${pkgver} > gcc/BASE-VER
+#  echo ${pkgver} > gcc/BASE-VER
 
   mkdir build
   cd build
@@ -62,4 +64,6 @@ build() {
   rm -rf ${pkgdir}/usr/bin
   rm -rf ${pkgdir}/usr{,share}/man
   find ${pkgdir} -name gcc.mo -delete
+
+#  rm -f {pkgdir}/usr/share/info/dir
 }
