--- a/kde-l10n-fr/trunk/PKGBUILD
+++ b/kde-l10n-fr/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-fr
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="French Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-fr')
 provides=('kde-i18n-fr')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('48ab1cef0a7aaec514e19e015ec9f2f5')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('44cc1732acba917244843edf248e8de9')
 
 build() {
 	cd $srcdir
