--- a/deluge/trunk/PKGBUILD
+++ b/deluge/trunk/PKGBUILD
@@ -1,24 +1,29 @@
 # $Id$
-# Maintainer: Roman Kyrylych <roman@archlinux.org>
+# Maintainer: Hugo Doria <hugo@archlinux.org>
 
 pkgname=deluge
-pkgver=0.5.9.4
+pkgver=0.9.08
 pkgrel=1
-pkgdesc="Bittorrent client written in PyGTK"
+pkgdesc="A bittorrent client written with python and pygtk"
 arch=('i686' 'x86_64')
 url="http://deluge-torrent.org/"
-license=('GPL')
-depends=('pygtk' 'boost>=1.35.0' 'pyxdg' 'dbus-python' 'librsvg' 'desktop-file-utils'
-         'hicolor-icon-theme')
-makedepends=('intltool')
-install=deluge.install
-source=(http://download.deluge-torrent.org/source/$pkgver/${pkgname}-${pkgver}.tar.gz)
-md5sums=('8baee1df11074ca523d57ddc157a4ce4')
+license=('GPL2')
+depends=('pygtk' 'boost' 'pyxdg' 'dbus-python' 'librsvg' 'setuptools')
+makedepends=('subversion' 'intltool')
+conflicts=('deluge')
+provides=('deluge')
+source=(http://download.deluge-torrent.org/source/$pkgver/$pkgname-$pkgver.tar.gz)
+md5sums=('49c35efb775fb98b3ce30adedff392c1')
+sha1sums=('7c0ac9234301b826ace253a354b753a5ec552ae9')
 options=('!emptydirs')
 
 build() {
-  cd ${srcdir}/${pkgname}-torrent-${pkgver}
 
+  cd ${srcdir}/${pkgname}-${pkgver}
+
+  sed -i 's|boost_thread|boost_thread-mt|' setup.py
   python setup.py install --prefix=/usr --root=${pkgdir}
-  install -D -m644 pixmaps/deluge.svg ${pkgdir}/usr/share/pixmaps/deluge.svg
+
+  install -D -m644 deluge/data/pixmaps/deluge.svg ${pkgdir}/usr/share/pixmaps/deluge.svg 
 }
+
