--- a/deluge/trunk/PKGBUILD
+++ b/deluge/trunk/PKGBUILD
@@ -3,16 +3,14 @@
 
 pkgname=deluge
 pkgver=0.9.08
-pkgrel=1
+pkgrel=2
 pkgdesc="A bittorrent client written with python and pygtk"
 arch=('i686' 'x86_64')
 url="http://deluge-torrent.org/"
 license=('GPL2')
-depends=('pygtk' 'boost' 'pyxdg' 'dbus-python' 'librsvg' 'setuptools')
+depends=('pygtk' 'boost>=1.35.0' 'pyxdg' 'dbus-python' 'librsvg' 'setuptools')
 makedepends=('subversion' 'intltool')
-conflicts=('deluge')
-provides=('deluge')
-source=(http://download.deluge-torrent.org/source/$pkgver/$pkgname-$pkgver.tar.gz)
+source=(http://download.deluge-torrent.org/source/${pkgver}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('49c35efb775fb98b3ce30adedff392c1')
 sha1sums=('7c0ac9234301b826ace253a354b753a5ec552ae9')
 options=('!emptydirs')
