--- a/bzr/trunk/PKGBUILD
+++ b/bzr/trunk/PKGBUILD
@@ -1,22 +1,23 @@
 # $Id$
 # Maintainer: Hugo Doria <hugo@archlinux.org>
+
 pkgname=bzr
-pkgver=1.5
-pkgrel=2
+pkgver=1.6
+pkgrel=1
 pkgdesc="A decentralized revision control system"
 arch=('i686' 'x86_64')
 url="http://www.bazaar-vcs.org"
 license=('GPL')
 depends=('python')
-source=(http://bazaar-vcs.org/releases/src/bzr-$pkgver.tar.gz)
-md5sums=('fa82e556401802537eeb8e50ecc8b4e7')
+source=(http://launchpad.net/bzr/1.6/1.6/+download/${pkgname}-${pkgver}.tar.gz)
+md5sums=('28161a7356846aecf485c10950ba8af6')
 
 build() {
-  cd $startdir/src/$pkgname-$pkgver
+  cd ${srcdir}/${pkgname}-${pkgver}
   sed -i 's|man/man1|share/man/man1|' setup.py
-  python setup.py install --prefix=/usr --root=$startdir/pkg
+  python setup.py install --prefix=/usr --root=${pkgdir}
 
   # bash-completion
   install -D -m644 contrib/bash/bzr \
-    $startdir/pkg/etc/bash_completion.d/bzr
+    ${pkgdir}/etc/bash_completion.d/bzr
 }
