--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,14 +2,15 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 pkgname=gdb
 pkgver=6.8
-pkgrel=2
+pkgrel=3
 pkgdesc="The GNU Debugger"
 arch=(i686 x86_64)
+url="http://sources.redhat.com/gdb/"
 depends=('ncurses' 'expat')
 options=('!libtool')
 license=('GPL3')
+install=gdb.install
 source=(http://ftp.gnu.org/gnu/gdb/${pkgname}-${pkgver}.tar.bz2)
-url="http://sources.redhat.com/gdb/"
 md5sums=('c9da266b884fb8fa54df786dfaadbc7a')
 
 build() {
@@ -22,4 +23,5 @@ build() {
   # resolve conflicts with binutils
   rm -f ${startdir}/pkg/usr/include/{bfd,dis-asm,symcat,ansidecl,bfdlink}.h
   rm -f ${startdir}/pkg/usr/lib/{libiberty,libbfd,libopcodes}.a
+  rm -f ${startdir}/pkg/usr/share/info/{bfd.info,configure.info,standards.info}
 }
