--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -2,20 +2,20 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-session
-pkgver=2.22.3
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="The GNOME Session Handler"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
-depends=('tcp_wrappers' 'libgnomeui>=2.22.1' 'gnome-settings-daemon>=2.22.2.1' 'at-spi>=1.22.1')
+depends=('libgnomeui>=2.22.90' 'policykit-gnome>=0.9.2' 'gnome-settings-daemon>=2.23.90' 'at-spi>=1.23.6' 'startup-notification>=0.9')
 makedepends=('perlxml' 'pkgconfig')
 options=(!emptydirs)
 install=gnome-session.install
 url="http://www.gnome.org"
 groups=('gnome')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2
 	gnome.desktop)
-md5sums=('859b61b5368aa000c9bcb8b0d0688ca2'
+md5sums=('9d0621a8829e8f5611e4dcb65563cac8'
 	 '152cddde06e16f16641746467f7ff965')
 
 build() {
