--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,17 +2,15 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libdrm
-pkgver=2.4.0
+pkgver=2.3.1
 pkgrel=1
-_snap=20080813
 pkgdesc="Userspace interface to kernel DRM services"
 arch=(i686 x86_64)
 depends=('glibc')
 options=('!libtool')
 url="http://dri.freedesktop.org/"
-source=(ftp://ftp.archlinux.org/other/libdrm/libdrm-${_snap}.tar.bz2)
-#http://dri.freedesktop.org/${pkgname}/${pkgname}-${pkgver}.tar.bz2
-md5sums=('904d38a936b9d22418c3a889ded82d49')
+source=(http://dri.freedesktop.org/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('620fe7dd02c3236c3e9881a3a238173d')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
