--- a/libgl/trunk/PKGBUILD
+++ b/libgl/trunk/PKGBUILD
@@ -2,21 +2,20 @@
 # Maintainer: Alexander Baldeck <kth5@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=libgl
-pkgver=7.1rc4
+pkgver=7.1
 pkgrel=1
 pkgdesc="Mesa DRI OpenGL library and drivers"
 arch=(i686 x86_64)
 license=('LGPL')
 url="http://www.mesa3d.org"
-depends=('libdrm>=2.4.0' 'libxxf86vm' 'libxdamage' 'expat>=2.0.1')
+depends=('libdrm>=2.3.1' 'libxxf86vm' 'libxdamage' 'expat>=2.0.1')
 makedepends=('dri2proto>=1.1' 'glproto>=1.4.9' 'pkgconfig')
 provides=('libgl-dri')
 replaces=('libgl-dri' 'libgl-mesa')
-source=(http://www.mesa3d.org/beta/MesaLib-7.1-rc4.tar.gz)
-md5sums=('5844564b90fdf0a462c8a4e601fa3f78')
+source=(http://downloads.sourceforge.net/mesa3d/MesaLib-${pkgver}.tar.bz2)
 
 build() {
-  cd ${startdir}/src/Mesa-7.1-rc4
+  cd ${startdir}/src/Mesa-${pkgver}
   ./configure --prefix=/usr \
     --with-dri-driverdir=/usr/lib/xorg/modules/dri \
     --with-dri-drivers=swrast \
