--- a/libgl/trunk/PKGBUILD
+++ b/libgl/trunk/PKGBUILD
@@ -13,6 +13,7 @@ makedepends=('dri2proto>=1.1' 'glproto>=1.4.9' 'pkgconfig')
 provides=('libgl-dri')
 replaces=('libgl-dri' 'libgl-mesa')
 source=(http://downloads.sourceforge.net/mesa3d/MesaLib-${pkgver}.tar.bz2)
+md5sums=('6bff7f532d16f90f944a400c8bd7074d')
 
 build() {
   cd ${startdir}/src/Mesa-${pkgver}
