upgpkg: qt 4.4.1-4     added postgresql support; updated qt-copy-patches
git-svn-id: file:///srv/repos/svn-packages/svn@10744 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/qt/trunk/PKGBUILD
+++ b/qt/trunk/PKGBUILD
@@ -2,16 +2,16 @@
 
 pkgname=qt
 pkgver=4.4.1
-pkgrel=3
-_qtcopyver=853144
+pkgrel=4
+_qtcopyver=854850
 pkgdesc="The QT gui toolkit."
 arch=('i686' 'x86_64')
 url="http://www.trolltech.com/products/qt"
 license=('GPL3')
 options=('!libtool')
 depends=('libpng' 'libxi' 'mesa' 'fontconfig' 'libxrandr' 'glib2' 'libtiff' 'libmng' 'sqlite3')
-optdepends=('libmysqlclient' 'unixodbc')
-makedepends=('mysql' 'unixodbc')
+optdepends=('postgresql-libs' 'libmysqlclient' 'unixodbc')
+makedepends=('postgresql-libs' 'mysql' 'unixodbc')
 provides=("qt4=${pkgver}")
 replaces=('qt4')
 conflicts=('qt4')
@@ -20,7 +20,7 @@ _pkgfqn=qt-x11-opensource-src-$pkgver
 source=("ftp://ftp.trolltech.com/qt/source/${_pkgfqn}.tar.gz"
         "ftp://ftp.archlinux.org/other/qt/qt-copy-patches-${_qtcopyver}.tar.bz2")
 md5sums=('b09decad252b5181f300135e3122481d'
-         '11b20ea698c30c52b94d83b927ac6099')
+         'ed5ad227bc0148ce7646d74bd8a44dbb')
 
 build() {
 	unset QMAKESPEC
@@ -43,6 +43,8 @@ build() {
 
 	sed -i 's|-cp -P -f|-cp -L -f|' qmake/Makefile.unix
 	sed -i "s|-O2|$CXXFLAGS|" mkspecs/common/g++.conf
+	# fix postgres build
+	sed -e '/pg_config --libs/d' -i configure
 	# do not compile demos, examples and docs
 	sed -i 's|CFG_NOBUILD_PARTS=""|CFG_NOBUILD_PARTS="demos examples docs"|' configure
 
@@ -56,7 +58,7 @@ build() {
 		-examplesdir /usr/share/doc/qt/examples \
 		-demosdir /usr/share/doc/qt/demos \
 		-no-exceptions \
-		-plugin-sql-{mysql,sqlite,odbc} \
+		-plugin-sql-{psql,mysql,sqlite,odbc} \
 		-system-sqlite \
 		-no-phonon \
 		-no-separate-debug-info \
