--- a/libgl/trunk/PKGBUILD
+++ b/libgl/trunk/PKGBUILD
@@ -21,10 +21,14 @@ md5sums=('6bff7f532d16f90f944a400c8bd7074d'
 build() {
   cd ${startdir}/src/Mesa-${pkgver}
   patch -Np1 -i ${srcdir}/mesa-7.1-link-shared.patch || return 1
+  export CFLAGS="${CFLAGS} -ffast-math"
   ./configure --prefix=/usr \
     --with-dri-driverdir=/usr/lib/xorg/modules/dri \
     --with-dri-drivers=swrast \
     --enable-glx-tls \
+    --disable-ttm-api \
+    --with-driver=dri \
+    --enable-xcb \
     --disable-glu \
     --disable-glut \
     --disable-glw || return 1
