--- a/libxau/trunk/PKGBUILD
+++ b/libxau/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=libxau
-pkgver=1.0.3
+pkgver=1.0.4
 pkgrel=1
 pkgdesc="X11 authorisation library"
 arch=(i686 x86_64)
@@ -12,16 +12,14 @@ makedepends=('pkgconfig' 'xproto')
 license=('custom')
 options=('!libtool')
 source=(${url}/releases/individual/lib/libXau-${pkgver}.tar.bz2)
-md5sums=('75a9f2b85cd1617b5ca98c9095323853')
+md5sums=('0f2b88d857e0a3f5898e4759c541af46')
 
 build() {
   cd ${startdir}/src/libXau-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc \
-              --host=${CHOST} --build=${CHOST}
+  ./configure --prefix=/usr --sysconfdir=/etc || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 
-# install custom license
-install -Dm644 $srcdir/libXau-$pkgver/COPYING \
-	$pkgdir/usr/share/licenses/$pkgname/COPYING
+  install -m755 -d ${pkgdir}/usr/share/licenses/${pkgname}
+  install -m644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/COPYING || return 1
 }
