upgpkg: xf86-input-digitaledge 1.1.1-1
git-svn-id: file:///srv/repos/svn-packages/svn@11039 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xf86-input-digitaledge/trunk/PKGBUILD
+++ b/xf86-input-digitaledge/trunk/PKGBUILD
@@ -2,22 +2,21 @@
 #Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=xf86-input-digitaledge
-pkgver=1.1.0
-pkgrel=4
+pkgver=1.1.1
+pkgrel=1
 pkgdesc="X.Org Digital Edge Tablet input driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.1.1')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
 groups=('xorg-input-drivers')
-options=('nolibtool')
+options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('53461c34cc0712aacab92b820b9fcb84')
+md5sums=('4c27e0f3c6447e76df39a837fd46a00f')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr \
-              --build=${CHOST} --host=${CHOST}
+  ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
