upgpkg: xf86-input-hyperpen 1.2.0-1
git-svn-id: file:///srv/repos/svn-packages/svn@11115 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xf86-input-hyperpen/trunk/PKGBUILD
+++ b/xf86-input-hyperpen/trunk/PKGBUILD
@@ -2,22 +2,21 @@
 #Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=xf86-input-hyperpen
-pkgver=1.1.0
-pkgrel=4
+pkgver=1.2.0
+pkgrel=1
 pkgdesc="X.Org HyperPen Tablet input driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.1.1')
-options=('nolibtool')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+options=('!libtool')
 groups=('xorg-input-drivers')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('1dfccb75069e61e0c6f990b47eb58c40')
+md5sums=('175c1e1ad668ebbbe212c1e975dd14f9')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr \
-              --build=${CHOST} --host=${CHOST}
+  ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
